ecmascript/parser/tests/test262-error-references/fail/8f05256d87c7a6ae.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/8f05256d87c7a6ae.js:1:1
  |
1 | throw
  | ^^^^^

